# Courses

CMake/: .gitignore  CMakeLists.txt  main.cpp
CMake/hello-exe/: CMakeLists.txt  main.cpp
CMake/hello-lib/: CMakeLists.txt
CMake/hello-lib/src/hello-lib/: hello.cpp  hello.hpp
Udacity/Tensorflow/: README.md
